# DXT-Mirror_DXT-Mirror

./: .gitignore  00-dxt-mirror.py  EXAMPLES.md  INVENTORY_FORMAT.md  INVENTORY_FORMAT_NEW.md  INVENTORY_SUMMARY.md  LICENSE  MANIFEST.in  MIRROR_SYSTEM.md  Makefile  PACKAGE_SUMMARY.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup_dev.py  test_full_workflow.py
dxt_curator/: __init__.py
dxt_curator/cli/: __init__.py  main.py
dxt_curator/core/: __init__.py  discovery.py  evaluator.py  file_inventory.py  inventory.py  mirror.py  workflow.py
dxt_curator/utils/: __init__.py  config.py  logging.py  security.py
scripts/: README.md  cleanup.py  create_mirror_repo.py  discover_mirrors.py  dxt_workflow.py  get_upstream.py  quick_start.py  simple_sync.py  sync_mirrors.py  test_setup.py
